add constraints to SQL table creation

--- a/DataEngineering/1-DataModeling/Lesson3/etl.ipynb
+++ b/DataEngineering/1-DataModeling/Lesson3/etl.ipynb
@@ -1119,155 +1119,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# df.head()\n",
+    "# df[df['artist'] == \"Planet P Project\"]\n",
     "# df[df['song'] == \"Aww Skeet Skeet\"]\n",
     "# df[df['artist'] == \"Enya\"]\n",
     "\n",
@@ -1319,8 +1176,7 @@
     "        songid, artistid = None, None\n",
     "        \n",
     "    # insert songplay record\n",
-    "    songplay_data = (index,\n",
-    "                     pd.to_datetime(row.ts, unit='ms'),\n",
+    "    songplay_data = (pd.to_datetime(row.ts, unit='ms'),\n",
     "                     row.userId,\n",
     "                     row.level,\n",
     "                     songid,\n",
@@ -1348,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
