--- a/DataEngineering/1-DataModeling/Lesson3/test.ipynb
+++ b/DataEngineering/1-DataModeling/Lesson3/test.ipynb
@@ -60,7 +60,7 @@
        "        <th>user_agent</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>0</td>\n",
+       "        <td>1</td>\n",
        "        <td>2018-11-18 02:33:21.796000</td>\n",
        "        <td>83</td>\n",
        "        <td>free</td>\n",
@@ -82,7 +82,7 @@
        "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.77.4 (KHTML, like Gecko) Version/7.0.5 Safari/537.77.4&quot;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>4</td>\n",
+       "        <td>3</td>\n",
        "        <td>2018-11-18 09:39:04.796000</td>\n",
        "        <td>40</td>\n",
        "        <td>free</td>\n",
@@ -93,7 +93,7 @@
        "        <td>&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.77.4 (KHTML, like Gecko) Version/7.0.5 Safari/537.77.4&quot;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>5</td>\n",
+       "        <td>4</td>\n",
        "        <td>2018-11-18 10:18:11.796000</td>\n",
        "        <td>79</td>\n",
        "        <td>free</td>\n",
@@ -104,7 +104,7 @@
        "        <td>Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; Trident/5.0)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>9</td>\n",
+       "        <td>5</td>\n",
        "        <td>2018-11-18 13:16:01.796000</td>\n",
        "        <td>29</td>\n",
        "        <td>paid</td>\n",
@@ -117,11 +117,11 @@
        "</table>"
       ],
       "text/plain": [
-       "[(0, datetime.datetime(2018, 11, 18, 2, 33, 21, 796000), 83, 'free', None, None, 693, 'Lubbock, TX', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36\"'),\n",
+       "[(1, datetime.datetime(2018, 11, 18, 2, 33, 21, 796000), 83, 'free', None, None, 693, 'Lubbock, TX', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36\"'),\n",
        " (2, datetime.datetime(2018, 11, 18, 3, 22, 4, 796000), 40, 'free', None, None, 555, 'Oxnard-Thousand Oaks-Ventura, CA', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.77.4 (KHTML, like Gecko) Version/7.0.5 Safari/537.77.4\"'),\n",
-       " (4, datetime.datetime(2018, 11, 18, 9, 39, 4, 796000), 40, 'free', None, None, 698, 'Oxnard-Thousand Oaks-Ventura, CA', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.77.4 (KHTML, like Gecko) Version/7.0.5 Safari/537.77.4\"'),\n",
-       " (5, datetime.datetime(2018, 11, 18, 10, 18, 11, 796000), 79, 'free', None, None, 78, 'Dallas-Fort Worth-Arlington, TX', 'Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; Trident/5.0)'),\n",
-       " (9, datetime.datetime(2018, 11, 18, 13, 16, 1, 796000), 29, 'paid', None, None, 589, 'Atlanta-Sandy Springs-Roswell, GA', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"')]"
+       " (3, datetime.datetime(2018, 11, 18, 9, 39, 4, 796000), 40, 'free', None, None, 698, 'Oxnard-Thousand Oaks-Ventura, CA', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.77.4 (KHTML, like Gecko) Version/7.0.5 Safari/537.77.4\"'),\n",
+       " (4, datetime.datetime(2018, 11, 18, 10, 18, 11, 796000), 79, 'free', None, None, 78, 'Dallas-Fort Worth-Arlington, TX', 'Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; Trident/5.0)'),\n",
+       " (5, datetime.datetime(2018, 11, 18, 13, 16, 1, 796000), 29, 'paid', None, None, 589, 'Atlanta-Sandy Springs-Roswell, GA', '\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_4) AppleWebKit/537.78.2 (KHTML, like Gecko) Version/7.0.6 Safari/537.78.2\"')]"
       ]
      },
      "execution_count": 3,
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -172,13 +172,6 @@
        "        <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>40</td>\n",
-       "        <td>Tucker</td>\n",
-       "        <td>Garrison</td>\n",
-       "        <td>M</td>\n",
-       "        <td>free</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "        <td>79</td>\n",
        "        <td>James</td>\n",
        "        <td>Martin</td>\n",
@@ -192,17 +185,24 @@
        "        <td>F</td>\n",
        "        <td>paid</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>35</td>\n",
+       "        <td>Molly</td>\n",
+       "        <td>Taylor</td>\n",
+       "        <td>F</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
        "[(83, 'Stefany', 'White', 'F', 'free'),\n",
        " (40, 'Tucker', 'Garrison', 'M', 'free'),\n",
-       " (40, 'Tucker', 'Garrison', 'M', 'free'),\n",
        " (79, 'James', 'Martin', 'M', 'free'),\n",
-       " (29, 'Jacqueline', 'Lynch', 'F', 'paid')]"
+       " (29, 'Jacqueline', 'Lynch', 'F', 'paid'),\n",
+       " (35, 'Molly', 'Taylor', 'F', 'free')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://hynso:***@127.0.0.1/sparkifydb\n",
-      "1 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -242,13 +242,45 @@
        "        <td>1984</td>\n",
        "        <td>269.81832</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOXVLOJ12AB0189215</td>\n",
+       "        <td>Amor De Cabaret</td>\n",
+       "        <td>ARKRRTF1187B9984DA</td>\n",
+       "        <td>0</td>\n",
+       "        <td>177.47546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOUDSGM12AC9618304</td>\n",
+       "        <td>Insatiable (Instrumental Version)</td>\n",
+       "        <td>ARNTLGG11E2835DDB9</td>\n",
+       "        <td>0</td>\n",
+       "        <td>266.39628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOMJBYD12A6D4F8557</td>\n",
+       "        <td>Keepin It Real (Skit)</td>\n",
+       "        <td>ARD0S291187B9B7BF5</td>\n",
+       "        <td>0</td>\n",
+       "        <td>114.78159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOQHXMF12AB0182363</td>\n",
+       "        <td>Young Boy Blues</td>\n",
+       "        <td>ARGSJW91187B9B1D6B</td>\n",
+       "        <td>0</td>\n",
+       "        <td>218.77506</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('SOIAZJW12AB01853F1', 'Pink World', 'AR8ZCNI1187B9A069B', 1984, Decimal('269.81832'))]"
+       "[('SOIAZJW12AB01853F1', 'Pink World', 'AR8ZCNI1187B9A069B', 1984, Decimal('269.81832')),\n",
+       " ('SOXVLOJ12AB0189215', 'Amor De Cabaret', 'ARKRRTF1187B9984DA', 0, Decimal('177.47546')),\n",
+       " ('SOUDSGM12AC9618304', 'Insatiable (Instrumental Version)', 'ARNTLGG11E2835DDB9', 0, Decimal('266.39628')),\n",
+       " ('SOMJBYD12A6D4F8557', 'Keepin It Real (Skit)', 'ARD0S291187B9B7BF5', 0, Decimal('114.78159')),\n",
+       " ('SOQHXMF12AB0182363', 'Young Boy Blues', 'ARGSJW91187B9B1D6B', 0, Decimal('218.77506'))]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +299,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://hynso:***@127.0.0.1/sparkifydb\n",
-      "1 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -288,13 +320,45 @@
        "        <td>NaN</td>\n",
        "        <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARKRRTF1187B9984DA</td>\n",
+       "        <td>Sonora Santanera</td>\n",
+       "        <td></td>\n",
+       "        <td>NaN</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARNTLGG11E2835DDB9</td>\n",
+       "        <td>Clp</td>\n",
+       "        <td></td>\n",
+       "        <td>NaN</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARD0S291187B9B7BF5</td>\n",
+       "        <td>Rated R</td>\n",
+       "        <td>Ohio</td>\n",
+       "        <td>NaN</td>\n",
+       "        <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARGSJW91187B9B1D6B</td>\n",
+       "        <td>JennyAnyKind</td>\n",
+       "        <td>North Carolina</td>\n",
+       "        <td>35.21962</td>\n",
+       "        <td>-80.01955</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('AR8ZCNI1187B9A069B', 'Planet P Project', '', Decimal('NaN'), Decimal('NaN'))]"
+       "[('AR8ZCNI1187B9A069B', 'Planet P Project', '', Decimal('NaN'), Decimal('NaN')),\n",
+       " ('ARKRRTF1187B9984DA', 'Sonora Santanera', '', Decimal('NaN'), Decimal('NaN')),\n",
+       " ('ARNTLGG11E2835DDB9', 'Clp', '', Decimal('NaN'), Decimal('NaN')),\n",
+       " ('ARD0S291187B9B7BF5', 'Rated R', 'Ohio', Decimal('NaN'), Decimal('NaN')),\n",
+       " ('ARGSJW91187B9B1D6B', 'JennyAnyKind', 'North Carolina', Decimal('35.21962'), Decimal('-80.01955'))]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +448,7 @@
        " (datetime.datetime(2018, 11, 18, 13, 16, 1, 796000), 13, 18, 46, 11, 2018, 6)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +467,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://hynso:***@127.0.0.1/sparkifydb\n",
-      "3 rows affected.\n"
+      "1 rows affected.\n"
      ]
     },
     {
@@ -413,76 +477,89 @@
        "    <tr>\n",
        "        <th>song_id</th>\n",
        "        <th>artist_id</th>\n",
-       "        <th>duration</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td>SOIAZJW12AB01853F1</td>\n",
        "        <td>AR8ZCNI1187B9A069B</td>\n",
-       "        <td>269.81832</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>SOIAZJW12AB01853F1</td>\n",
-       "        <td>AR8ZCNI1187B9A069B</td>\n",
-       "        <td>269.81832</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>SOIAZJW12AB01853F1</td>\n",
-       "        <td>AR8ZCNI1187B9A069B</td>\n",
-       "        <td>269.81832</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('SOIAZJW12AB01853F1', 'AR8ZCNI1187B9A069B', Decimal('269.81832')),\n",
-       " ('SOIAZJW12AB01853F1', 'AR8ZCNI1187B9A069B', Decimal('269.81832')),\n",
-       " ('SOIAZJW12AB01853F1', 'AR8ZCNI1187B9A069B', Decimal('269.81832'))]"
+       "[('SOIAZJW12AB01853F1', 'AR8ZCNI1187B9A069B')]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# song_select = (\n",
-    "#     \"\"\"\n",
-    "#     SELECT \n",
-    "#       song_id, \n",
-    "#       artist_id\n",
-    "#     FROM songs\n",
-    "#     WHERE\n",
-    "#       title = '%s' AND\n",
-    "#       artist_id = '%s' AND\n",
-    "#       duration = '%s';\n",
-    "#     \"\"\"\n",
-    "# )\n",
-    "\n",
-    "# %sql SELECT                                 \\\n",
-    "#        song_id,                             \\\n",
-    "#        artist_id,                           \\\n",
-    "#        duration                             \\\n",
-    "#      FROM songs                             \\\n",
-    "#      WHERE                                  \\\n",
-    "#        title = 'Pink World' AND             \\\n",
-    "#        artist_id = 'AR8ZCNI1187B9A069B' AND \\\n",
-    "#        duration = '269.81832';\n",
-    "\n",
-    "# %sql \\\n",
-    "#   SELECT \\\n",
-    "#     song_id, \\\n",
-    "#     artist_id, \\\n",
-    "#     duration \\\n",
-    "#   FROM songs \\\n",
-    "#   WHERE \\\n",
-    "#     title = ('Pink World') AND \\\n",
-    "#     artist_id = ('AR8ZCNI1187B9A069B') AND \\\n",
-    "#     duration = (269.81832);\n",
-    "\n"
+    "%sql \\\n",
+    "SELECT \\\n",
+    "  song_id, \\\n",
+    "  artists.artist_id \\\n",
+    "FROM songs \\\n",
+    "JOIN artists \\\n",
+    "ON songs.artist_id = artists.artist_id \\\n",
+    "WHERE \\\n",
+    "  songs.title = 'Pink World' AND \\\n",
+    "  artists.name = 'Planet P Project' AND \\\n",
+    "  songs.duration = 269.81832;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://hynso:***@127.0.0.1/sparkifydb\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>song_id</th>\n",
+       "        <th>artist_id</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOXVLOJ12AB0189215</td>\n",
+       "        <td>ARKRRTF1187B9984DA</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('SOXVLOJ12AB0189215', 'ARKRRTF1187B9984DA')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql \\\n",
+    "SELECT \\\n",
+    "  song_id, \\\n",
+    "  artists.artist_id \\\n",
+    "FROM songs \\\n",
+    "JOIN artists \\\n",
+    "ON songs.artist_id = artists.artist_id \\\n",
+    "WHERE \\\n",
+    "  songs.title = 'Amor De Cabaret' AND \\\n",
+    "  artists.name = 'Sonora Santanera' AND \\\n",
+    "  songs.duration = 177.47546;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +576,7 @@
        "<table>\n",
        "    <tr>\n",
        "        <th>song_id</th>\n",
-       "        <th>count</th>\n",
+       "        <th>artist_id</th>\n",
        "    </tr>\n",
        "</table>"
       ],
@@ -507,13 +584,13 @@
        "[]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql select song_id, COUNT(*) from songplays GROUP BY song_id;"
+    "%sql SELECT song_id, COUNT(*) FROM songplays GROUP BY song_id;"
    ]
   },
   {
