inline SQL statements

--- a/DataEngineering/1-DataModeling/Lesson3/etl.ipynb
+++ b/DataEngineering/1-DataModeling/Lesson3/etl.ipynb
@@ -1119,56 +1119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.head()\n",
-    "# df[df['artist'] == \"Planet P Project\"]\n",
-    "# df[df['song'] == \"Aww Skeet Skeet\"]\n",
-    "# df[df['artist'] == \"Enya\"]\n",
-    "\n",
-    "# song_select_tmp = (\n",
-    "#     \"\"\"\n",
-    "#     SELECT \n",
-    "#       song_id, \n",
-    "#       artist_id\n",
-    "#     FROM songs\n",
-    "#     WHERE\n",
-    "#       title = (%s) AND\n",
-    "#       artist_id = (%s) AND\n",
-    "#       duration = (%s);\n",
-    "#     \"\"\"\n",
-    "# )\n",
-    "\n",
-    "# data = ('Pink World', 'AR8ZCNI1187B9A069B', 269.81832)\n",
-    "\n",
-    "# song_select_tmp = (\n",
-    "#     \"SELECT * FROM songs WHERE title = %s AND artist_id = %s AND duration = %s;\"\n",
-    "# )\n",
-    "\n",
-    "# cur.mogrify(song_select, (data))\n",
-    "\n",
-    "# cur.execute(song_select_tmp, (data, ))\n",
-    "# conn.commit()\n",
-    "\n",
-    "# row = cur.fetchone()\n",
-    "# while row:\n",
-    "#   print(row)\n",
-    "#   row = cur.fetchone()\n",
-    "\n",
-    "# for index, row in df.iterrows():\n",
-    "#     print(index, row.song, row.artist, row.length)\n",
-    "#     cur.execute(song_select, (row.song, row.artist, row.length))\n",
-    "#     results = cur.fetchone()\n",
-    "#     print(results)\n",
-    "\n",
     "for index, row in df.iterrows():\n",
     "  \n",
     "    # get songid and artistid from song and artist tables\n",
+    "    # print(cur.mogrify(song_select, (row.song, row.artist, row.length)))\n",
     "    cur.execute(song_select, (row.song, row.artist, row.length))\n",
     "    results = cur.fetchone()\n",
-    "    print(results)\n",
+    "    # print(results)\n",
     "    \n",
     "    if results:\n",
     "        songid, artistid = results\n",
@@ -1204,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
