--- a/DataEngineering/1-DataModeling/Lesson3/test.ipynb
+++ b/DataEngineering/1-DataModeling/Lesson3/test.ipynb
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "[('SOXVLOJ12AB0189215', 'ARKRRTF1187B9984DA')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://hynso:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
+      "2 rows affected.\n"
      ]
     },
     {
@@ -576,15 +576,23 @@
        "<table>\n",
        "    <tr>\n",
        "        <th>song_id</th>\n",
-       "        <th>artist_id</th>\n",
+       "        <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>None</td>\n",
+       "        <td>6819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOZCTXZ12AB0182364</td>\n",
+       "        <td>1</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[(None, 6819), ('SOZCTXZ12AB0182364', 1)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
