revise project from reviewer's recommendations

--- a/DataEngineering/1-DataModeling/Lesson3/test.ipynb
+++ b/DataEngineering/1-DataModeling/Lesson3/test.ipynb
@@ -27,7 +27,6 @@
     }
    ],
    "source": [
-    "# %sql postgresql://student:student@127.0.0.1/sparkifydb\n",
     "%sql postgresql://hynso:sigeMund67@127.0.0.1/sparkifydb"
    ]
   },
@@ -158,13 +157,6 @@
        "        <th>level</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>83</td>\n",
-       "        <td>Stefany</td>\n",
-       "        <td>White</td>\n",
-       "        <td>F</td>\n",
-       "        <td>free</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "        <td>40</td>\n",
        "        <td>Tucker</td>\n",
        "        <td>Garrison</td>\n",
@@ -172,10 +164,24 @@
        "        <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>79</td>\n",
-       "        <td>James</td>\n",
-       "        <td>Martin</td>\n",
-       "        <td>M</td>\n",
+       "        <td>78</td>\n",
+       "        <td>Chloe</td>\n",
+       "        <td>Roth</td>\n",
+       "        <td>F</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>77</td>\n",
+       "        <td>Magdalene</td>\n",
+       "        <td>Herman</td>\n",
+       "        <td>F</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>8</td>\n",
+       "        <td>Kaylee</td>\n",
+       "        <td>Summers</td>\n",
+       "        <td>F</td>\n",
        "        <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -183,23 +189,16 @@
        "        <td>Jacqueline</td>\n",
        "        <td>Lynch</td>\n",
        "        <td>F</td>\n",
-       "        <td>paid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>35</td>\n",
-       "        <td>Molly</td>\n",
-       "        <td>Taylor</td>\n",
-       "        <td>F</td>\n",
        "        <td>free</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(83, 'Stefany', 'White', 'F', 'free'),\n",
-       " (40, 'Tucker', 'Garrison', 'M', 'free'),\n",
-       " (79, 'James', 'Martin', 'M', 'free'),\n",
-       " (29, 'Jacqueline', 'Lynch', 'F', 'paid'),\n",
-       " (35, 'Molly', 'Taylor', 'F', 'free')]"
+       "[(40, 'Tucker', 'Garrison', 'M', 'free'),\n",
+       " (78, 'Chloe', 'Roth', 'F', 'free'),\n",
+       " (77, 'Magdalene', 'Herman', 'F', 'free'),\n",
+       " (8, 'Kaylee', 'Summers', 'F', 'free'),\n",
+       " (29, 'Jacqueline', 'Lynch', 'F', 'free')]"
       ]
      },
      "execution_count": 4,
@@ -459,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +491,7 @@
        "[(None, 6819), ('SOZCTXZ12AB0182364', 1)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
